[gd_scene load_steps=4 format=3 uid="uid://bow3j80suy28q"]

[ext_resource type="Script" path="res://Menu/settings.gd" id="1_wrvo1"]

[sub_resource type="LabelSettings" id="LabelSettings_epcyt"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_igl85"]
font_size = 32

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wrvo1")

[node name="ResLabel" type="Label" parent="."]
offset_left = 31.0
offset_top = 117.0
offset_right = 259.0
offset_bottom = 173.0
text = "Resolution:"
label_settings = SubResource("LabelSettings_epcyt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 297.0
offset_top = 109.0
offset_right = 688.0
offset_bottom = 310.0

[node name="QHD" type="Button" parent="VBoxContainer"]
offset_right = 391.0
offset_bottom = 64.0
size_flags_vertical = 3
tooltip_text = "Das a nice monitor."
text = "2560 x 1440"

[node name="FHD" type="Button" parent="VBoxContainer"]
offset_top = 68.0
offset_right = 391.0
offset_bottom = 132.0
size_flags_vertical = 3
text = "1920 x 1080"

[node name="HD" type="Button" parent="VBoxContainer"]
offset_top = 136.0
offset_right = 391.0
offset_bottom = 201.0
size_flags_vertical = 3
text = "1280 x 720"

[node name="Back" type="Button" parent="."]
offset_left = 55.0
offset_top = 1018.0
offset_right = 259.0
offset_bottom = 1046.0
text = "Back da fuq up"

[node name="WindowMode" type="Label" parent="."]
offset_left = 20.0
offset_top = 436.0
offset_right = 251.0
offset_bottom = 484.0
text = "Window mode:"
label_settings = SubResource("LabelSettings_igl85")

[node name="FS" type="Button" parent="."]
offset_left = 299.0
offset_top = 434.0
offset_right = 684.0
offset_bottom = 500.0
text = "Fullscreen"

[node name="Windowed" type="Button" parent="."]
offset_left = 310.0
offset_top = 549.0
offset_right = 682.0
offset_bottom = 607.0
text = "Windowed"

[connection signal="pressed" from="VBoxContainer/QHD" to="." method="_on_qhd_pressed"]
[connection signal="pressed" from="VBoxContainer/FHD" to="." method="_on_fhd_pressed"]
[connection signal="pressed" from="VBoxContainer/HD" to="." method="_on_hd_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="FS" to="." method="_on_fs_pressed"]
[connection signal="pressed" from="Windowed" to="." method="_on_windowed_pressed"]
